--- a/package.json
+++ b/package.json
@@ -30,8 +30,10 @@
         "vite": "^6.0"
     },
     "dependencies": {
+        "dayjs": "^1.11.13",
         "react-favicon": "^2.0.7",
         "react-hot-toast": "^2.5.1",
+        "react-icons": "^5.4.0",
         "react-query": "^3.39.3"
     }
 }
