--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     },
     "dependencies": {
         "dayjs": "^1.11.13",
+        "lucide-react": "^0.474.0",
         "react-favicon": "^2.0.7",
         "react-hot-toast": "^2.5.1",
         "react-icons": "^5.4.0",
