--- a/package.json
+++ b/package.json
@@ -1,40 +1,29 @@
 {
-    "private": true,
-    "type": "module",
-    "scripts": {
-        "build": "vite build",
-        "dev": "vite",
-        "lint": "eslint resources/js --ext .js,.jsx --ignore-path .gitignore --fix"
-    },
-    "devDependencies": {
-        "@headlessui/react": "^2.0.0",
-        "@inertiajs/react": "^2.0.0",
-        "@tailwindcss/forms": "^0.5.3",
-        "@vitejs/plugin-react": "^4.2.0",
-        "autoprefixer": "^10.4.12",
-        "axios": "^1.7.4",
-        "concurrently": "^9.0.1",
-        "eslint": "^8.57.0",
-        "eslint-config-prettier": "^9.1.0",
-        "eslint-plugin-prettier": "^5.1.3",
-        "eslint-plugin-react": "^7.34.4",
-        "eslint-plugin-react-hooks": "^4.6.2",
-        "laravel-vite-plugin": "^1.0",
-        "postcss": "^8.4.31",
-        "prettier": "3.4.2",
-        "prettier-plugin-organize-imports": "^4.0.0",
-        "prettier-plugin-tailwindcss": "^0.6.5",
-        "react": "^18.2.0",
-        "react-dom": "^18.2.0",
-        "tailwindcss": "^3.2.1",
-        "vite": "^6.0"
-    },
-    "dependencies": {
-        "dayjs": "^1.11.13",
-        "lucide-react": "^0.474.0",
-        "react-favicon": "^2.0.7",
-        "react-hot-toast": "^2.5.1",
-        "react-icons": "^5.4.0",
-        "react-query": "^3.39.3"
-    }
+  "private": true,
+  "type": "module",
+  "scripts": {
+    "dev": "vite",
+    "build": "vite build"
+  },
+  "devDependencies": {
+    "@inertiajs/react": "^1.0.0",
+    "@tailwindcss/forms": "^0.5.3",
+    "@vitejs/plugin-react": "^4.2.0",
+    "autoprefixer": "^10.4.12",
+    "axios": "^1.6.4",
+    "laravel-vite-plugin": "^1.0.0",
+    "postcss": "^8.4.31",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "tailwindcss": "^3.2.1",
+    "vite": "^5.0.0"
+  },
+  "dependencies": {
+    "@headlessui/react": "^2.2.7",
+    "dayjs": "^1.11.13",
+    "lucide-react": "^0.537.0",
+    "react-hot-toast": "^2.5.2",
+    "react-icons": "^5.5.0",
+    "react-signature-canvas": "^1.1.0-alpha.2"
+  }
 }
